Correct contact page and add netlifyToml redirects

--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo-edolia.png" />
+    <link rel="icon" type="image/svg+xml" href="/edolia.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Edolia application" />
+    <meta name="description" content="Edolia est une entreprise malagasy spécialisée dans l'exportation B2B 
+    de produits agricoles et d'intrants vers l'Europe, l'Afrique et l'Asie. Notre portefeuille comprend engrais,
+    riz hybride, girofle, vanille, litchis, clous de girofle, fèves de cacao et autres inrants agricoles,
+    tous traçables, conformes et durables." />
     <link href="/src/index.css" rel="stylesheet">
-    <title>edolia</title>
+    <title>Edolia</title>
   </head>
   <body>
     <div id="root"></div>
